# hydrozoa-frost-poc

./: Cargo.toml  aiken.toml  devnet.toml  main.tx3  plutus.json  trix.toml
src/: lib.rs  main.rs
validators/: always_succeed.ak
