[package]
name = "hydrazoa-collat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bech32 = "0.11.0"
blake2 = "0.10.6"
frost-ed25519 = "2.1.0"
hex = "0.4.3"
once_cell = "1.21.3"
pallas = "0.33.0"
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
serde = "1.0.219"
tokio = { version = "1.47.1", features = ["full"] }
tx3-sdk = "0.8.0"
